--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>laboratorio-ps-2-informatica</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Contenido Público</h1>
+    <h1>Fabricio Uz</h1>
 </body>
 </html>
